--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="helo">helo</string>
     <string name="title_activity_settings__page">Settings_Page</string>
+    <string name="title_activity_play">Play</string>
 </resources>
